--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -157,7 +157,7 @@ getInput()#chạy chương trình getInput() để bắt đầu.
   </div>
   </div>
 </div>
-  <a id="openTestCode" onclick="open_test_code()" href="#openTestCode" style="margin-top:10px;">Thử code này</a>
+  <a id="openTestCode" onclick="open_test_code()" href="#openTestCode" style="margin-top:10px;text-align:center">Thử code này</a>
 <div id="test_code">
   <h4>Thử code:</h4>
 <iframe id="frame_code" src="https://www.online-python.com/OcP8wGUZ2j">  </iframe>
