--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -107,8 +107,8 @@ body, html {
     width: 100%;
   }
 }
-#test_code{display:none}
-#frame_code{height: 600px;width: 100%;margin-top:15px;}
+#test_code{display:none;margin-top:15px;}
+#frame_code{height: 600px;width: 100%;}
 </style>
 </head>
 <body translate="no" >
