--- a/demo/noel_to_tinh/index.html
+++ b/demo/noel_to_tinh/index.html
@@ -12,8 +12,8 @@
       <button style="position: absolute;" class= "no">Không</button>
       <a class="yes" id="yes" href="yes.html">Tớ đồng ý <i style="color: red;" class="fas fa-heart"></i></a>
     </div>
-    <img style="height: 50%; margin-left: 120px;" src="thong.png">
-    <img style="height: 60%; float: right; margin-right: 120px;" src="onggia.png">
+    <img style="height: 50%; margin-left: 120px;" src="https://i.imgur.com/jIFFBAx.png">
+    <img style="height: 60%; float: right; margin-right: 120px;" src="https://i.imgur.com/Sv55cqX.png">
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
 <script>
