--- a/demo/noel_to_tinh/index.html
+++ b/demo/noel_to_tinh/index.html
@@ -41,7 +41,7 @@ body {background-color: #F24236;width: 100%;font-family: 'Lobster', cursive;over
     <p id="days"> Noel này cậu đi chơi với tớ nhé ^^ </p>
     <div class="rep">
       <button style="position: absolute;" class= "no">Không</button>
-      <a class="yes" id="yes" href="yes.html">Tớ đồng ý <i style="color: red;" class="fas fa-heart"></i></a>
+      <a class="yes" id="yes" href="//trumgiamgia.tk">Tớ đồng ý <i style="color: red;" class="fas fa-heart"></i></a>
     </div>
     <img style="height: 50%; margin-left: 120px;" src="https://i.imgur.com/jIFFBAx.png">
     <img style="height: 60%; float: right; margin-right: 120px;" src="https://i.imgur.com/Sv55cqX.png">
