--- a/demo/noel_to_tinh/index.html
+++ b/demo/noel_to_tinh/index.html
@@ -17,32 +17,7 @@
     <img style="height: 60%; float: right; margin-right: 120px;" src="https://i.imgur.com/Sv55cqX.png">
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
-<script>
-snowDrop(150, randomInt(1035, 1280));
-snow(150, 150);
-function snow(num, speed) {
-		if (num > 0) {
-			setTimeout(function () {
-				$('#drop_' + randomInt(1, 250)).addClass('animate');
-				num--;
-				snow(num, speed);
-			}, speed);
-		}
-	};
-	function snowDrop(num, position) {
-		if (num > 0) {
-			var drop = '<div class="drop snow" id="drop_' + num + '"></div>';
-
-			$('body').append(drop);
-			$('#drop_' + num).css('left', position);
-			num--;
-			snowDrop(num, randomInt(60, 1280));
-		}
-	};
-function randomInt(min, max) {
-		return Math.floor(Math.random() * (max - min + 1) + min);
-	};
-</script>
+<script src="main.js"></script>
 </body>
 <script>
   $('button').on('mouseover', function () {
