--- a/demo/noel_to_tinh/index.html
+++ b/demo/noel_to_tinh/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
+  <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
   <title>Hello</title>
   <script src="https://kit.fontawesome.com/313025c77d.js" crossorigin="anonymous"></script>
   <link href="main.css" rel="stylesheet"/>
