--- a/demo/count_down_timer/index.html
+++ b/demo/count_down_timer/index.html
@@ -1,4 +1,4 @@
-<link href="/count_down_timer/main.css" rel="stylesheet"/>
+<link href="././main.css" rel="stylesheet"/>
 <ul id="countdown">
   <li id="days">
     <div class="number">00</div>
@@ -17,4 +17,4 @@
     <div class="label">Seconds</div>
   </li>
 </ul>
-<script src="/count_down_timer/main.js"></script>
+<script src="././main.js"></script>
