--- a/demo/count_down_timer/index.html
+++ b/demo/count_down_timer/index.html
@@ -17,4 +17,6 @@
     <div class="label">Seconds</div>
   </li>
 </ul>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 <script src="././main.js"></script>
