--- a/demo/bau-cua-tom-ca/index.html
+++ b/demo/bau-cua-tom-ca/index.html
@@ -10,9 +10,9 @@
 			<h2 id="title">Bầu cua tôm cá</h2>
 			<p id="des">Nhấn xóc và đợi 3s</p>
 			<div id="ketqua">
-				<img id="anh1" src="./././././ca.png"/>
-				<img id="anh2" src="./././././bau.png"/>
-				<img id="anh3" src="./././././tom.png"/>
+				<img id="anh1" src="https://i.imgur.com/JjZSazf.png"/>
+				<img id="anh2" src="https://i.imgur.com/O3S7N5u.png"/>
+				<img id="anh3" src="https://i.imgur.com/EUQIHT7.png"/>
 			</div>
 			<div id="chucnang">
 					<p id="innerThbao">Kết quả hiển thị ở đây</p>
