--- a/demo/bau-cua-tom-ca/index.html
+++ b/demo/bau-cua-tom-ca/index.html
@@ -1,8 +1,11 @@
 <html>
 	<head>
+		<title>Bầu cua tôm cá | Random</title>
 		<meta charset='UTF-8'/>
 		<meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
 		<meta content='IE=edge' http-equiv='X-UA-Compatible'/>
+		<meta name="og:image" content="https://i.imgur.com/oIUNTXT.png"/>
+		<meta name="og:description" content="Random Bầu Cua"/>
 		<link href="././main.css" rel="stylesheet"/>
 	</head>
 	<body>
