--- a/demo/totinh-1402/index.html
+++ b/demo/totinh-1402/index.html
@@ -20,19 +20,19 @@
                         <i class="fa fa-heart fa-8x"></i>
                     </div>
                     <div class="card__title--name">
-                        <h1> Lấy lì xì không cho nè </h1>
+                        <h1> 14/2 Valen thai iu tớ khum? </h1>
                     </div>
                 </div>
                 <div class="button__list mt-10">
                     <div class="row">
                         <div class="col col-lg-6 mt-10">
-                            <div class="button button__message btnNo" onclick="showMess()">
-                                <span>  </span>
+                            <div class="button button__subscribe btnNo" onclick="showMess()">
+                                <span> Đồng ý </span>
                             </div>
                         </div>
                         <div class="col col-lg-6 mt-10">
-                            <div class="button button__subscribe btnNo" onclick="showMess()">
-                                <span> Không </span>
+                            <div class="button button__message btnNo" onclick="showMess()">
+                                <span>  </span>
                             </div>
                         </div>
                     </div>
@@ -44,9 +44,8 @@
                     <div style="height: 30px;"></div>
                     <div class="card__title--name">
                         <h1> 
-                            <span style="color: red;">Chúc mừng</span>
-                            <br> Bạn đã chọn đúng! <br>
-                            <span> Có cái đầu buồi </span>
+                            <span style="color: red;">Uk mik bít mà</span>
+                            <br> Iu iu iu! <br>
                         </h1>
                     </div>
                     <div style="height: 30px;"></div>
