--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cuongbok Dep Trai BroVjp</title>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.3.1/css/all.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-    <link href="/main.css" rel="stylesheet"/>
+    <link href="/./main.css" rel="stylesheet"/>
 </head>  
 <body>
     <div class="outer_wrapper">
@@ -15,6 +15,6 @@
   <div class="sign">
     <a target="_blank" data-mes="Anh bạn xem nguồn làm gì?" href="//fb.com/cuongbok">CuongbokDepTraiProVjp</a>
   </div>
-    <script src="/main.js"></script>
+    <script src="/./main.js"></script>
 </body>  
 </html>
