--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -1,5 +1,15 @@
 <html>
-  <head></head>
+  <head>
+    <style>
+      div > img {
+        width: 100px;
+        margin: 10px;
+        text-align: center;
+        line-height: 75px;
+        font-size: 30px;
+      }
+    </style>
+  </head>
   <body>
   
     <h2>Tải app Thanh niên Việt Nam, đăng kí hoặc đăng nhập</h2>
