--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <style>
+      <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
       div > img {
         width: 100px;
         margin: 10px;
