--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -16,7 +16,7 @@
     <h2>Tải app Thanh niên Việt Nam, đăng kí hoặc đăng nhập</h2>
     <p>B1: Bấm vào tên ở góc trên, bấm chọn hình bút chì để sửa</p>
     <p>B2: Cập nhật thông tin như hình</p>
-    <div style="display:grid;flex-wrap: nowrap;">
+    <div style="display:flex;flex-wrap: nowrap;">
       
       <img src="https://i.imgur.com/RUnPIwB.jpg"/>
       <img src="https://i.imgur.com/W7uDMg6.jpg"/>
