--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -2,13 +2,7 @@
   <head>
     <style>
       <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
-      div > img {
-        width: 100px;
-        margin: 10px;
-        text-align: center;
-        line-height: 75px;
-        font-size: 30px;
-      }
+      div > img {max-width:50%;}
     </style>
   </head>
   <body>
