--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
+    <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
     <style>
-      <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
-      div > img {max-width:50%;}
+      
+      #flex-container{padding:5px;}
+      #flex-container > img {max-width:45%;margin:5px;}
     </style>
   </head>
   <body>
@@ -10,7 +12,7 @@
     <h2>Tải app Thanh niên Việt Nam, đăng kí hoặc đăng nhập</h2>
     <p>B1: Bấm vào tên ở góc trên, bấm chọn hình bút chì để sửa</p>
     <p>B2: Cập nhật thông tin như hình</p>
-    <div style="display:flex;flex-wrap: nowrap;">
+    <div id="flex-container" style="display:flex;flex-wrap: nowrap;">
       
       <img src="https://i.imgur.com/RUnPIwB.jpg"/>
       <img src="https://i.imgur.com/W7uDMg6.jpg"/>
