--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -9,6 +9,7 @@
       
       #flex-container{padding:5px;}
       #flex-container > img {max-width:45%;margin:5px;}
+      img{max-width:100%;}
     </style>
   </head>
   <body>
