--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -25,7 +25,7 @@
       <img src="https://i.imgur.com/W7uDMg6.jpg"/>
       
     </div>
-    <p>Nhấn hoàn tất</p>
+    <p>Kéo xuống chọn phần Dân tộc, Tôn giáo rồi nhấn hoàn tất</p>
     
     <p><span class="text-danger">B3:</span> Nhấn "Gửi tới cán bộ Đoàn" ở phần thông tin cá nhân</p>
       <img src="https://i.imgur.com/G9lJewx.jpg"/>
