--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -6,7 +6,7 @@
     
     <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
     <style>
-      .step{font-size: 20px;}
+      .step{font-size: 20px;font-weight: 600;font-family: system-ui;}
       #flex-container{padding:5px;}
       #flex-container > img {max-width:45%;margin:5px;}
       img{max-width:100%;}
