--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -16,7 +16,9 @@
   </head>
   <body>
   
-    <h2>Tải app Thanh niên Việt Nam, đăng kí hoặc đăng nhập</h2>
+    <h2>Tải app Thanh niên Việt Nam (
+      <a href="https://play.google.com/store/apps/details?id=com.vnpt.tnvn" target="_blank">Android</a> hoặc 
+      <a href="https://apps.apple.com/us/app/thanh-ni%C3%AAn-vi%E1%BB%87t-nam/id1535733802" target="_blank">IOS</a>), đăng kí hoặc đăng nhập</h2>
     <p class="step"><span class="text-danger">B1:</span> Bấm vào tên ở góc trên, bấm chọn hình bút chì để sửa</p>
     <p class="step"><span class="text-danger">B2:</span> Cập nhật thông tin như hình</p>
     <div id="flex-container" style="display:flex;flex-wrap: nowrap;">
