--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -27,7 +27,7 @@
       <img src="https://i.imgur.com/W7uDMg6.jpg"/>
       
     </div>
-    <p>Kéo xuống chọn phần Dân tộc, Tôn giáo rồi nhấn hoàn tất</p>
+    <p>Chức vụ trong Đoàn: Đoàn viên. Kéo xuống chọn phần Dân tộc, Tôn giáo rồi nhấn hoàn tất</p>
     
     <p class="step"><span class="text-danger">B3:</span> Nhấn "Gửi tới cán bộ Đoàn" ở phần thông tin cá nhân</p>
       <img src="https://i.imgur.com/G9lJewx.jpg"/>
