--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -4,7 +4,7 @@
     <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
     <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
     
-    <title>Cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
+    <title>Hướng dẫn cập nhật thông tin Đoàn tại App Thanh niên Việt Nam</title>
     <style>
       .step{font-size: 20px;font-weight: 600;font-family: system-ui;}
       #flex-container{padding:5px;}
