--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -31,5 +31,6 @@
     
     <p class="step"><span class="text-danger">B3:</span> Nhấn "Gửi tới cán bộ Đoàn" ở phần thông tin cá nhân</p>
       <img src="https://i.imgur.com/G9lJewx.jpg"/>
+    <p>Nếu app báo là cần xác thực thì chọn xác thực cccd rồi gửi nhé</p>
   </body>
 </html>
