--- a/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
+++ b/study/11a7/doan/hd-cap-nhat-thong-tin-vao-doan/index.html
@@ -28,8 +28,8 @@
       
     </div>
     <p>Note:<br/>
-      - Chức vụ trong Đoàn: Đoàn viên. <br/>
-      - Ai không có sổ thì ghi 20/11/2021. <br/>
+      - Chức vụ trong Đoàn: <b>Đoàn viên</b>. <br/>
+      - Ai không có sổ thì ghi <b>20/11/2021</b>. <br/>
       Kéo xuống chọn phần Dân tộc, Tôn giáo rồi nhấn hoàn tất</p>
     
     <p class="step"><span class="text-danger">B3:</span> Nhấn "Gửi tới cán bộ Đoàn" ở phần thông tin cá nhân</p>
